deps/chakrashim/core/test/Array/array_splice_double.baseline
0.6,1.34,2.5,3.34,4.454,5.65,6.634

0.6,1.34,2.5,3.34,4.454,5.65,6.634


0.6,1.34,2.5,3.34,4.454,5.65,6.634




8,9,10

8,9,10

11,12
8,9,10
11,12


11,12

11,12,8.32,9.232,11.232,12.234

11,12,8.32,9.232,11.232,12.234,8.32,9.232,11.232,12.234

11,12,8.32,9.232,11.232,12.234,8.32,9.232,11.232,12.234,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232
11.232,12.234
11,12,8.32,9.232,11.232,12.234,8.32,9.232,1,2,3,4,5,6,7,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232
12,8.32,9.232
11,[object Object],hello,11.232,12.234,8.32,9.232,1,2,3,4,5,6,7,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232,8.32,9.232
6
1.23
9
9,10,11,12,2.23,3.23,4.54,5.66,6.45
0

6
4,5,6
4
1,2,3,7
0
undefined
hello world
undefined
hello world
undefined
hello world
Test: splice when the item to replace is not writable.
e instanceOf TypeError = true
a.length = 2
arr.length = 12
